--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ description: > # your text below (remove <br> elements if you don't need line br
   Second description 
   <br><br>
   <a href="https://www.linkedin.com/in/michael-de-jong-a3715414/">View My LinkedIn Profile</a>
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 #google_analytics: UA-000000-0 # your Google Analytics tracking ID here
