--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Michael de Jong
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Hi my name is Michael de Jong and I live in The Netherlands. For the last 10+ years I have been a web developer and working hard to change to the Data Analysis field.
-  <br><br>
-  Second description 
-  <br><br>
-  <a href="https://www.linkedin.com/in/michael-de-jong-a3715414/">View My LinkedIn Profile</a>
+Hi my name is Michael de Jong and I live in The Netherlands. For the last 10+ years I have been a web developer and working hard to change to the Data Analysis field.
+<br><br>
+This Github website has been created to share my projects in the Data Analysis field so you will get an idea of the project, the goal, the steps taken and the results.
+<br><br>
+<a href="https://www.linkedin.com/in/michael-de-jong-a3715414/">View My LinkedIn Profile</a>
 theme: jekyll-theme-minimal
 #google_analytics: UA-000000-0 # your Google Analytics tracking ID here
