--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Michael de Jong
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/personal_image.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
 Hi my name is Michael de Jong and I live in The Netherlands. For the last 10+ years I have been a web developer and working hard to change to the Data Analysis field.
 <br><br>
